--- a/tide_site_restriction.info.yml
+++ b/tide_site_restriction.info.yml
@@ -6,6 +6,7 @@ core: 8.x
 dependencies:
   - dpc-sdp:tide_core
   - dpc-sdp:tide_site
+  - drupal:select2
 config_devel:
   install:
     - field.field.user.user.field_user_site
