--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "dpc-sdp/tide_site": "@dev",
         "drupal/select2": "^1.4",
         "oomphinc/composer-installers-extender": "^1.1",
-        "npm-asset/select2": "^4.0"
+        "npm-asset/select2": "^4.0",
+        "drupal/form_options_attributes": "^1.0"
     },
     "repositories": {
         "drupal": {
