--- a/tide_site_restriction.libraries.yml
+++ b/tide_site_restriction.libraries.yml
@@ -1,3 +1,10 @@
+tide_site_restriction_node_form:
+  version: 1.0
+  js:
+    js/tide_site_restriction_node_form.js: {}
+  dependencies:
+    - core/jquery
+
 tide_site_restriction_user_form:
   version: 1.0
   js:
