--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
         "select2/select2": "^4.0",
         "drupal/form_options_attributes": "^1.0"
     },
+    "suggest": {
+        "dpc-sdp/tide_api": "^1.4.0"
+    },
     "repositories": {
         "drupal": {
             "type": "composer",
