--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,13 @@
     "name": "dpc-sdp/tide_site_restriction",
     "description": "User restriction by Sites for Tide Drupal 8 distribution",
     "type": "drupal-module",
-    "license": "GPL-2.0+",
-    "version": "0.0.1",
+    "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "@dev",
-        "dpc-sdp/tide_site": "@dev",
+        "dpc-sdp/tide_core": "^1.5.3",
+        "dpc-sdp/tide_site": "^1.3.0",
         "drupal/select2": "^1.4",
         "oomphinc/composer-installers-extender": "^1.1",
-        "npm-asset/select2": "^4.0",
-        "drupal/form_options_attributes": "^1.0"
+        "select2/select2": "^4.0"
     },
     "repositories": {
         "drupal": {
@@ -18,7 +16,7 @@
             "url": "https://packages.drupal.org/8"
         }
     },
-    "minimum-stability": "alpha",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "extra": {
         "installer-paths": {
