--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
         "dpc-sdp/tide_site": "^1.3.0",
         "drupal/select2": "^1.4",
         "oomphinc/composer-installers-extender": "^1.1",
-        "select2/select2": "^4.0"
+        "select2/select2": "^4.0",
+        "drupal/form_options_attributes": "^1.0"
+    },
+    "suggest": {
+        "dpc-sdp/tide_api": "^1.4.0"
     },
     "repositories": {
         "drupal": {
