--- a/tide_site_restriction.routing.yml
+++ b/tide_site_restriction.routing.yml
@@ -2,6 +2,6 @@ tide_site_restriction.sites_allocation_tab:
   path: '/user/{user}/sites_allocation'
   defaults:
     _controller: '\Drupal\tide_site_restriction\Controller\TideSiteRestrictionController::sitesAllocationTab'
-    _title: 'Sites allocation'
+    _title: 'Site permissions'
   requirements:
     _permission: 'access content'
