--- a/config/install/field.field.user.user.field_user_site.yml
+++ b/config/install/field.field.user.user.field_user_site.yml
@@ -14,8 +14,8 @@ field_name: field_user_site
 entity_type: user
 bundle: user
 label: 'Site Restriction'
-description: 'This user will only have editorial access to content belonging to the selected Sites and Sub-sites. Leave this field empty to grant the user access to any sites.'
-required: true
+description: 'This user will only have editorial access to content belonging to the selected Sites and Sub-sites.'
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
