--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "dpc-sdp/tide_core": "^1.5.3",
         "dpc-sdp/tide_site": "^1.3.0",
+        "dpc-sdp/tide_publication": "^1.0.0",
         "drupal/select2": "^1.4",
         "oomphinc/composer-installers-extender": "^1.1",
         "select2/select2": "^4.0",
