[SDPA-3781] Added new permission for performing node delete operations and update hook to grant permission to site_admin & approver.

--- a/tide_site_restriction.permissions.yml
+++ b/tide_site_restriction.permissions.yml
@@ -6,3 +6,7 @@ bypass site restriction:
   title: 'Bypass site restriction'
   description: 'Bypass user restriction by Sites.'
   restrict access: TRUE
+bypass node delete restriction:
+  title: 'bypass node delete restriction'
+  description: 'Bypass node delete restriction by Sites.'
+  restrict access: TRUE
