--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "dev-feature/SDPA-4225-Update-SDP-core-to-Drupal-8-8-5 as 1.5.9",
-        "dpc-sdp/tide_site": "dev-feature/SDPA-4225-Update-SDP-core-to-Drupal-8-8-5 as 1.3.2",
+        "dpc-sdp/tide_core": "^1.6.0",
+        "dpc-sdp/tide_site": "^1.4.0",
         "dpc-sdp/tide_publication": "^1.0.0",
         "drupal/select2": "1.7",
         "oomphinc/composer-installers-extender": "^1.1",
@@ -13,7 +13,7 @@
         "drupal/form_options_attributes": "^1.0"
     },
     "suggest": {
-        "dpc-sdp/tide_api": "dev-feature/SDPA-4225-Update-SDP-core-to-Drupal-8-8-5 as 1.4.0"
+        "dpc-sdp/tide_api": "^1.5.0"
     },
     "repositories": {
         "drupal": {
