--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,16 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "^1.5.3",
-        "dpc-sdp/tide_site": "^1.3.0",
+        "dpc-sdp/tide_core": "^1.6.0",
+        "dpc-sdp/tide_site": "^1.4.0",
         "dpc-sdp/tide_publication": "^1.0.0",
-        "drupal/select2": "^1.4",
+        "drupal/select2": "1.7",
         "oomphinc/composer-installers-extender": "^1.1",
         "select2/select2": "^4.0",
         "drupal/form_options_attributes": "^1.0"
     },
     "suggest": {
-        "dpc-sdp/tide_api": "^1.4.0"
+        "dpc-sdp/tide_api": "^1.5.0"
     },
     "repositories": {
         "drupal": {
