--- a/config/install/field.field.user.user.field_user_site.yml
+++ b/config/install/field.field.user.user.field_user_site.yml
@@ -15,7 +15,7 @@ entity_type: user
 bundle: user
 label: 'Site Restriction'
 description: 'This user will only have editorial access to content belonging to the selected Sites and Sub-sites. This field is optional for roles permitted to bypass site restrictions. See the permissions sub-system for the roles that can bypass.'
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
