--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,16 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "^2.0.14",
-        "dpc-sdp/tide_site": "^2.0.5",
-        "dpc-sdp/tide_publication": "^1.0.0",
-        "drupal/select2": "1.7",
+        "dpc-sdp/tide_core": "dev-feature/SDPA-5396-drupalcore-9 as 2.0.14",
+        "dpc-sdp/tide_site": "dev-compatible-with-drupal-9 as 2.0.5",
+        "dpc-sdp/tide_publication": "dev-compatible-with-drupal-9 as 1.0.13",
+        "drupal/select2": "^1.7",
         "oomphinc/composer-installers-extender": "^2.0",
         "select2/select2": "^4.0",
         "drupal/form_options_attributes": "^1.0"
     },
     "suggest": {
-        "dpc-sdp/tide_api": "^1.5.0"
+        "dpc-sdp/tide_api:dev-compatible-with-drupal-9": "Allows to use Drupal in headless mode"
     },
     "repositories": {
         "drupal": {
