--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,16 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "^2.0.14",
-        "dpc-sdp/tide_site": "^2.0.5",
-        "dpc-sdp/tide_publication": "^1.0.0",
-        "drupal/select2": "1.7",
+        "dpc-sdp/tide_core": "^3.0.0",
+        "dpc-sdp/tide_site": "^3.0.0",
+        "dpc-sdp/tide_publication": "^3.0.0",
+        "drupal/select2": "^1.7",
         "oomphinc/composer-installers-extender": "^2.0",
         "select2/select2": "^4.0",
         "drupal/form_options_attributes": "^1.0"
     },
     "suggest": {
-        "dpc-sdp/tide_api": "^1.5.0"
+        "dpc-sdp/tide_api:^3.0.0": "Allows to use Drupal in headless mode"
     },
     "repositories": {
         "drupal": {
