[SDPA-6261] Fixes a route permission issue

--- a/tide_site_restriction.services.yml
+++ b/tide_site_restriction.services.yml
@@ -8,3 +8,8 @@ services:
     class: Drupal\tide_site_restriction\EventSubscriber\TideSiteRestrictionRouterAlter
     tags:
       - { name: event_subscriber }
+  tide_site_restriction.site_access_route_check:
+    class: \Drupal\tide_site_restriction\Access\SiteAccessRouteCheck
+    arguments: ['@tide_site_restriction.helper']
+    tags:
+      - { name: access_check, applies_to: _site_access_route_check }
