--- a/config/install/node.type.publication.yml
+++ b/config/install/node.type.publication.yml
@@ -3,10 +3,13 @@ status: true
 dependencies:
   module:
     - menu_ui
+    - wysiwyg_template
 third_party_settings:
   menu_ui:
     available_menus: {  }
     parent: ''
+  wysiwyg_template:
+    default_template: ''
 name: Publication
 type: publication
 description: 'Use <em>Publication</em> content type to create publications with documents and metadata.'
