--- a/config/install/node.type.publication_page.yml
+++ b/config/install/node.type.publication_page.yml
@@ -3,10 +3,13 @@ status: true
 dependencies:
   module:
     - menu_ui
+    - wysiwyg_template
 third_party_settings:
   menu_ui:
     available_menus: {  }
     parent: ''
+  wysiwyg_template:
+    default_template: ''
 name: 'Publication page'
 type: publication_page
 description: ''
