--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "suggest": {
         "dpc-sdp/tide_api:^3.0.0": "Allows to use Drupal in headless mode",
-        "dpc-sdp/tide_publication": "dev-feature/update-composer"
+        "dpc-sdp/tide_publication:dev-feature/update-composer as 3.0.0": "dev-feature/update-composer as 3.0.4"
     },
     "repositories": {
         "drupal": {
@@ -35,5 +35,16 @@
             "bower-asset",
             "npm-asset"
         ]
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "php-http/discovery": true,
+            "drupal/console-extend-plugin": true,
+            "oomphinc/composer-installers-extender": true,
+            "cweagans/composer-patches": true,
+            "drupal/core-composer-scaffold": true
+        }
     }
 }
