--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "suggest": {
         "dpc-sdp/tide_api:^4.0.0": "Allows to use Drupal in headless mode",
-        "dpc-sdp/tide_publication:dev-bug/Cannot-install-with-Composer-on-D10": "Allows to use publication content type"
+        "dpc-sdp/tide_publication:^4.0.0": "Allows to use publication content type"
     },
     "repositories": {
         "drupal": {
